# B.1-COS

./: .gitignore  ACTION_PLAN.md  COMPREHENSIVE_EVALUATION.md  CONTRIBUTING.md  DEPLOYMENT_SUCCESS.md  ENHANCED_MCG_IMPLEMENTATION.rs  FIXES.md  IMPLEMENTATION_STATUS.md  ML_STRATEGY.md  OPENSSL_FIX.md  OPTIMIZATION_REPORT.md  PRE_PUSH_CHECKLIST.md  PROJECT_BLUEPRINT.md  QUICK_START.md  README-EN.md  README.md  RELEASE_NOTES.md  SPEC_IMPLEMENTATION_ANALYSIS.md  TESTING_SESSION_SUMMARY.md  TEST_REPORT.md  VERIFICATION_SUMMARY.md  cargo-tree.txt  spec_implementation_gap.md
.github/workflows/: benchmarks.yml  coverage.yml  flutter.yml  load-tests.yml  performance.yml  rust.yml
b_one_android_app/: build.gradle  settings.gradle
b_one_android_app/app/: build.gradle  libs_material_dep.txt
b_one_android_app/app/src/main/: AndroidManifest.xml
b_one_android_app/b_one_native_core/: Cargo.toml
b_one_android_app/b_one_native_core/b_one_core_native/: Cargo.toml
b_one_android_app/b_one_native_core/b_one_jni/: Cargo.toml
b_one_android_app/b_one_native_core/b_one_jni/src/: lib.rs
b_one_android_app/b_one_native_core/b_one_protocols_native/: build.rs
b_one_android_app/rust_core/: build.gradle.kts
b_one_native_core/: Cargo.toml
b_one_native_core/b_one_core_native/src/interfaces/: skills.rs
b_one_native_core/b_one_protocols_native/: Cargo.toml
b_one_native_core/b_one_tools_native/: Cargo.toml
b_one_native_core/b_one_tools_native/src/skills/: logical_reasoning_skill.rs  mod.rs  pattern_matching_skill.rs
coverage/: lcov.info
coverage/html/: index.html
native_core/: Cargo.toml
native_core/core_native/: Cargo.toml
native_core/core_native/src/: fep_cell.rs  lib.rs
native_core/core_native/src/interfaces/: aca.rs  fep_cell.rs
native_core/protocols_native/: Cargo.toml
native_core/protocols_native/src/: lib.rs
native_core/tools_native/: Cargo.toml
native_core/tools_native/src/skills/: analogy_reasoning_skill.rs  arithmetic_skill.rs  information_retrieval_skill.rs  logical_reasoning_skill.rs  pattern_matching_skill.rs
python/: README.md  pyproject.toml  test_simple.py
python/examples/: main.py
python/pandora_sdk/: __init__.py  pandora_sdk.py
reports/criterion/flow_from_bytes/base/: estimates.json  tukey.json
reports/criterion/flow_from_bytes/new/: benchmark.json  sample.json
reports/criterion/flow_from_bytes/report/: index.html
reports/criterion/flow_from_vec_clone/base/: sample.json
reports/criterion/report/: index.html
scripts/: coverage.sh  profile_flamegraph.sh  profile_memory.sh  simple_profiling.sh
sdk/: Cargo.toml  llvm-cov.json
sdk/.cargo/: config.toml
sdk/docs/: advanced_integration_guide.md  architecture.md
sdk/integration_tests/: Cargo.toml
sdk/integration_tests/tests/: active_inference_planning_test.rs  automatic_scientist_test.rs  birthing_ritual.rs  concurrent_execution.rs  cwm_v3_core_test.rs  end_to_end_performance.rs  error_scenarios.rs  interdependent_insight_test.rs  learning_engine_integration.rs  load_scenarios.rs  load_test_scenarios.rs  performance_regression.rs  phase_1_foundation_tests.rs  skandha_cycle.rs  transcendental_loop.rs  v3_consciousness_test.rs
sdk/pandora_core/: Cargo.toml  README.md
sdk/pandora_core/benches/: comprehensive_bench.rs  flow_bench.rs  hashmap_bench.rs  sync_vs_async.rs
sdk/pandora_core/src/: error.rs  fep_cell.rs  intents.rs  lib.rs  ontology.rs  string_interner.rs
sdk/pandora_core/src/interfaces/: aca.rs  mod.rs  skandhas.rs  skills.rs
sdk/pandora_core/src/skandha_implementations/: advanced_skandhas.rs  basic_skandhas.rs  mod.rs  skandha_factory.rs  tests.rs
sdk/pandora_core/tests/: skandha_properties.rs  skandha_properties_advanced.rs
sdk/pandora_cwm/: Cargo.toml
sdk/pandora_cwm/src/: lib.rs  model.rs
sdk/pandora_cwm/src/gnn/: layers.rs  message_passing.rs  mod.rs  tests.rs  types.rs
sdk/pandora_cwm/src/interdependent_repr/: irl.rs  itr_nn.rs
sdk/pandora_cwm/src/ml/: mod.rs  predictor.rs  trainer.rs
sdk/pandora_cwm/src/nn/: uq_models.rs
sdk/pandora_cwm/src/vsa/: hrr.rs
sdk/pandora_cwm/tests/: vsa_properties.rs
sdk/pandora_error/: Cargo.toml
sdk/pandora_error/src/: context.rs  lib.rs
sdk/pandora_learning_engine/: Cargo.toml
sdk/pandora_learning_engine/src/: active_inference_lightweight.rs  active_inference_planning_test.rs  active_inference_skandha.rs  experience_buffer.rs  integration_test.rs  lib.rs  non_attachment_learning_test.rs  policy.rs  skandha_integration.rs  transcendental_processor.rs  value_estimator.rs  world_models.rs
sdk/pandora_mcg/: Cargo.toml
sdk/pandora_mcg/benches/: enhanced_mcg_bench.rs
sdk/pandora_mcg/src/: causal_discovery.rs  enhanced_mcg.rs  lib.rs
sdk/pandora_orchestrator/: Cargo.toml
sdk/pandora_orchestrator/benches/: circuit_breaker_bench.rs  load_test.rs
sdk/pandora_orchestrator/examples/: e2e_integration.rs  edge_optimization_demo.rs  monitoring.rs  simple_cli.rs
sdk/pandora_orchestrator/src/: automatic_scientist_orchestrator.rs  automatic_scientist_test.rs  circuit_breaker.rs  edge_optimization.rs  lib.rs  simple_api.rs  static_skills.rs
sdk/pandora_orchestrator/tests/: circuit_properties.rs  orchestrator_tests.rs
sdk/pandora_protocols/: Cargo.toml  build.rs
sdk/pandora_rm/: Cargo.toml
sdk/pandora_rm/src/: lib.rs
sdk/pandora_sie/: Cargo.toml
sdk/pandora_sie/src/: lib.rs
sdk/pandora_tools/: Cargo.toml
sdk/pandora_tools/examples/: neural_skills_demo.rs
sdk/pandora_tools/src/: lib.rs
sdk/pandora_tools/src/agents/: fep_seed.rs
sdk/pandora_tools/src/skills/: analogy_reasoning_skill.rs  arithmetic_skill.rs  information_retrieval_skill.rs  logical_reasoning_skill.rs  mod.rs  pattern_matching_skill.rs
sdk/pandora_tools/tests/: analogy_reasoning_tests.rs  arithmetic_properties.proptest-regressions  arithmetic_properties.rs  logical_reasoning_tests.rs  pattern_matching_tests.rs
sdk/pandora_uniffi/: Cargo.toml  build.rs
sdk/pandora_uniffi/src/: lib.rs  pandora.udl
sdk/pandora_uniffi/tests/: basic_tests.rs
sdk/scripts/: benchmark_dashboard.sh  profile_flamegraph.sh  profile_memory.sh
(+184 files in other folders)
