[package]
name = "core_native"
version = "0.1.0"
edition = "2021"
description = "B.ONE Cognitive OS - Native Core"
authors = ["B.ONE Team <team@b1os.dev>"]
license = "MIT"

[dependencies]

protocols_native = { path = "../protocols_native" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fnv = "1.0"

[dev-dependencies]

[lib]
name = "core_native"
path = "src/lib.rs"
