[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
[package]
name = "tools_native"
version = "0.1.0"
edition = "2021"
description = "B.ONE Cognitive OS - Native Tools (empty for now)"
authors = ["B.ONE Team <team@b1os.dev>"]
license = "MIT"

[dependencies]
core_native = { path = "../core_native" }
async-trait = "0.1"
serde_json = "1.0"
meval = "0.2" # Cho ArithmeticSkill
regex = "1.11"
strsim = "0.11"
