[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_tools = { path = "../pandora_tools" }
pandora_cwm = { path = "../pandora_cwm", features = ["ml"] }
pandora_learning_engine = { path = "../pandora_learning_engine" }
pandora_mcg = { path = "../pandora_mcg", features = ["ml"] }
pandora_sie = { path = "../pandora_sie" }
pandora_orchestrator = { path = "../pandora_orchestrator", features = ["ml"] }
pandora_error = { path = "../pandora_error" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
fastrand = "2"
petgraph = "0.6"
bytes = "1.10"
smallvec = "1.11"
fnv = "1.0"
