[package]
name = "pandora_core"
version = "0.1.0"
edition = "2021"
description = "B.ONE Cognitive OS - Native Core"
authors = ["B.ONE Team <team@b1os.dev>"]
license = "Apache-2.0"

[dependencies]

pandora_protocols = { path = "../pandora_protocols" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fnv = "1.0"
pandora_error = { path = "../pandora_error" }
tracing = "0.1"
smallvec = "1.13"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
name = "pandora_core"
path = "src/lib.rs"
