[package]
name = "pandora_core"
version = "0.1.0"
edition = "2021"
description = "B.ONE Cognitive OS - Native Core"
authors = ["B.ONE Team <team@b1os.dev>"]
license = "Apache-2.0"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fnv = { workspace = true }
tracing = { workspace = true }
smallvec = "1.13"
bytes = "1.10"
parking_lot = "0.12"
pandora_error = { path = "../pandora_error" }
[dev-dependencies]
proptest = { workspace = true }
futures = { workspace = true }
pandora_protocols = { path = "../pandora_protocols" }
pandora_error = { path = "../pandora_error" }
tokio = { workspace = true }
criterion = "0.5"


[[bench]]
name = "flow_bench"
harness = false
[[bench]]
name = "hashmap_bench"
harness = false

[profile.bench]
debug = true

[lib]
name = "pandora_core"
path = "src/lib.rs"
