[package]
name = "pandora_cwm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
ml = []
tda = []

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_error = { path = "../pandora_error" }
tracing = "0.1"

num-complex = "0.4"
rustfft = "6.1"

# Temporarily disabled due to dependency conflicts
# candle-core = { version = "0.3.3", optional = true }
# candle-nn = { version = "0.3.3", optional = true }
