[package]
name = "pandora_learning_engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_cwm = { path = "../pandora_cwm" }
pandora_mcg = { path = "../pandora_mcg" }
pandora_sie = { path = "../pandora_sie" }
pandora_error = { path = "../pandora_error" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
rand = "0.8"
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }
# burn = { workspace = true }  # Disabled due to bincode compatibility
# wasmedge-sdk = { workspace = true }  # Disabled for now
libloading = { workspace = true }
