[package]
name = "pandora_mcg"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
# Temporarily disabled due to dependency conflicts
# ml = ["pandora_cwm/ml"]

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_cwm = { path = "../pandora_cwm" }
pandora_error = { path = "../pandora_error" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
