[package]
name = "pandora_mcg"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
ml = ["pandora_cwm/ml"]
tda = []
default = []

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_cwm = { path = "../pandora_cwm" }
pandora_error = { path = "../pandora_error" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
