[package]
name = "pandora_orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_tools = { path = "../pandora_tools" }
pandora_error = { path = "../pandora_error" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
fastrand = "2"

[[example]]
name = "simple_cli"
path = "examples/simple_cli.rs"
