[package]
name = "pandora_orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_tools = { path = "../pandora_tools" }
pandora_error = { path = "../pandora_error" }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
parking_lot = "0.12"
fastrand = "2"

# NEW: LRU cache
lru = "0.12"

[[example]]
name = "simple_cli"
path = "examples/simple_cli.rs"
