[package]
name = "pandora_orchestrator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_tools = { path = "../pandora_tools" }
pandora_error = { path = "../pandora_error" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
async-trait = { workspace = true }
parking_lot = "0.12"
fastrand = "2"
jsonschema = { version = "0.17", optional = true }
once_cell = "1"
prometheus = { version = "0.13" }
lru = "0.12"
fnv = { workspace = true }
config = { version = "0.14", default-features = false, features = ["toml"] }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[features]
default = []
# Enable runtime JSON Schema validation for skill I/O
schema_validation = ["jsonschema"]

[[example]]
name = "simple_cli"
path = "examples/simple_cli.rs"

[[bench]]
name = "load_test"
harness = false

[[bench]]
name = "circuit_breaker_bench"
harness = false
