[package]
name = "pandora_sie"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_mcg = { path = "../pandora_mcg" }
pandora_error = { path = "../pandora_error" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
fnv = { workspace = true }
