[package]
name = "pandora_uniffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
pandora_core = { path = "../pandora_core" }
uniffi = { version = "0.25", features = ["build"] }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }
