[package]
name = "pandora_uniffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
pandora_core = { path = "../pandora_core" }
pandora_orchestrator = { path = "../pandora_orchestrator" }
pandora_tools = { path = "../pandora_tools" }
uniffi = { version = "0.25", features = ["build"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }
